--- a/index.html
+++ b/index.html
@@ -327,9 +327,9 @@
             .pi-symbol { font-size: 7rem; }
             .pi-caption { font-size: 1.1rem; letter-spacing: 1px; }
 
-            /* Блок цифр Пи: строго симметричные отступы и центрирование */
+            /* Блок цифр Пи: увеличены в 1.3 раза, центрирование и симметрия */
             .pi-value-container {
-                padding: 25px 20px; /* Равные отступы по краям (20px) */
+                padding: 25px 20px; 
                 margin-bottom: 25px;
                 display: flex;
                 flex-direction: column;
@@ -339,9 +339,9 @@
             .pi-value-title { font-size: 1.2rem; margin-bottom: 20px; }
             
             .pi-value {
-                font-size: 1.1rem;
-                line-height: 1.8;
-                text-align: center; /* Центрируем, чтобы "38" и другие не выбивались */
+                font-size: 1.5rem; /* Увеличено для лучшей видимости на телефонах */
+                line-height: 1.9;
+                text-align: center; 
                 width: 100%;
             }
 
