--- a/index.html
+++ b/index.html
@@ -194,6 +194,19 @@
         .pi-prefix { font-weight: bold; color: rgb(74, 105, 189); }
         .theme-dark .pi-prefix { color: #ffffff; }
 
+        /* ВЕРНУЛ ЦВЕТА ЗДЕСЬ */
+        .theme-dark .digit-group:nth-child(4n+1),
+        .theme-dark .digit-group:nth-child(4n+2) {
+            color: #e6f7ff; 
+        }
+        .theme-dark .digit-group:nth-child(4n+3),
+        .theme-dark .digit-group:nth-child(4n+4) {
+            color: rgb(225, 243, 255);
+        }
+
+        .theme-light .digit-group:nth-child(odd) { color: rgb(74, 105, 189); }
+        .theme-light .digit-group:nth-child(even) { color: rgba(74, 105, 189, 0.8); }
+
         .digit-group { 
             display: inline-block; 
             margin-right: 8px; 
@@ -293,12 +306,12 @@
                 gap: 15px;
                 padding: 15px;
                 border-radius: 20px;
-                align-items: center; /* Центрируем настройки */
+                align-items: center; 
             }
             
             .control-group {
                 flex-direction: column;
-                align-items: center; /* Центрируем лейблы */
+                align-items: center; 
                 gap: 8px;
                 width: 100%;
                 padding-bottom: 10px;
@@ -311,7 +324,7 @@
                 flex-wrap: wrap;
                 gap: 8px;
                 width: 100%;
-                justify-content: center; /* Центрируем кнопки */
+                justify-content: center; 
             }
 
             .pi-symbol { font-size: 7rem; }
@@ -340,7 +353,6 @@
             .pi-info { padding: 15px; }
             .pi-info h2 { font-size: 1.4rem; }
             
-            /* Фикс таблицы: убираем свайп, уменьшаем шрифт и отступы */
             .records-table th, .records-table td {
                 padding: 8px 4px;
                 font-size: 0.85rem;
