--- a/index.html
+++ b/index.html
@@ -194,19 +194,22 @@
         .pi-prefix { font-weight: bold; color: rgb(74, 105, 189); }
         .theme-dark .pi-prefix { color: #ffffff; }
 
-        /* --- ВОТ ЭТОТ БЛОК ОТВЕЧАЕТ ЗА ЦВЕТА ЦИФР --- */
+        /* --- ВЕРНУЛ ОТДЕЛЕНИЕ ЦВЕТОМ ДЛЯ ВСЕХ УСТРОЙСТВ --- */
+        .theme-light .digit-group:nth-child(odd) { 
+            color: rgb(74, 105, 189) !important; 
+        }
+        .theme-light .digit-group:nth-child(even) { 
+            color: rgba(74, 105, 189, 0.6) !important; 
+        }
+
         .theme-dark .digit-group:nth-child(4n+1),
         .theme-dark .digit-group:nth-child(4n+2) {
-            color: #e6f7ff; 
+            color: #e6f7ff !important; 
         }
         .theme-dark .digit-group:nth-child(4n+3),
         .theme-dark .digit-group:nth-child(4n+4) {
-            color: rgb(225, 243, 255);
+            color: rgb(150, 200, 255) !important;
         }
-
-        .theme-light .digit-group:nth-child(odd) { color: rgb(74, 105, 189); }
-        .theme-light .digit-group:nth-child(even) { color: rgba(74, 105, 189, 0.8); }
-        /* ------------------------------------------- */
 
         .digit-group { 
             display: inline-block; 
