Update and rename ai_studio_code (32).html to index.html

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                 <h1>ИСПОЛЬЗОВАНИЕ СПЕЦИАЛЬНЫХ ТКАНЕЙ<br>В БРОНЕЖИЛЕТАХ</h1>
                 <p style="text-align: center; color: var(--text-secondary); margin-top: 20px;">Эволюция защиты: от стали до молекулярной химии</p>
                 <div style="margin-top: 40px; display: inline-block; padding: 10px 20px; border: 1px solid rgba(255,255,255,0.3); border-radius: 50px; font-size: 14px;">
-                    Проект подготовил ученик
+                    Проект подготовил Чермошенцев Григорий, 7"А" класс
                 </div>
             </div>
         </section>
